# fsblueprint

./: .gitignore  LICENSE  README.md  pyproject.toml  test_run.py
content_test/my_app/: README.md  requirements.txt
content_test/my_app/src/: config.py
content_test/my_app/src/utils/: helpers.py
content_test/my_app/tests/: test_main.py
examples/: simple.yaml  test_with_content.yaml
fsblueprint/: __init__.py  __main__.py  cli.py  core.py  utils.py
fsblueprint/core/: __init__.py  blueprint.py  ignore_patterns.py  scaffold.py  utils.py
test_feat/: .gitignore
