[project]
name = "fsblueprint"
version = "0.1.0"
description = "Bidirectional YAML ↔ Directory Structure Tool"
readme = "README.md"
authors = [
    {name = "Zuki", email = "sannimarzuk@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "pyyaml>=6.0.2"
]
keywords = ["yaml", "filesystem", "directory", "structure", "scaffold"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/zuxi-oss/fsblueprint"
Repository = "https://github.com/zuxi-oss/fsblueprint"

[project.scripts]
fsblueprint = "fsblueprint.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "twine>=6.1.0",
]
